--- a/plops-templates/packages/basic/README.md.hbs
+++ b/plops-templates/packages/basic/README.md.hbs
@@ -3,18 +3,17 @@
     <h1>Tresdoce NestJs Toolkit - {{kebabCase packageName}}</h1>
 </div>
 
-<p align="center">
+<div align="center">
     <img src="https://img.shields.io/static/v1.svg?style=flat&label=Node&message=v14.17.0&labelColor=339933&color=757575&logoColor=FFFFFF&logo=Node.js" alt="Node.js"/>
     <img src="https://img.shields.io/static/v1.svg?style=flat&label=Npm&message=v6.14.13&labelColor=CB3837&logoColor=FFFFFF&color=757575&logo=npm" alt="Npm"/>
-    <img src="https://img.shields.io/static/v1.svg?style=flat&label=NestJs&message=v8.2.6&labelColor=E0234E&logoColor=FFFFFF&color=757575&logo=Nestjs" alt="NestJs"/>
+    <img src="https://img.shields.io/static/v1.svg?style=flat&label=NestJs&message=v8.2.6&labelColor=E0234E&logoColor=FFFFFF&color=757575&logo=Nestjs" alt="NestJs"/><br/>
     <img alt="GitHub license" src="https://img.shields.io/github/license/tresdoce/tresdoce-nestjs-toolkit?style=flat">
     <img alt="GitHub package.json version" src="https://img.shields.io/github/package-json/v/tresdoce/tresdoce-nestjs-toolkit?filename=packages%2F{{kebabCase packageName}}%2Fpackage.json">
     <br/>
-</p>
+</div>
+<br/>
 
-
-Esta dependencia está pensada para ser utilizada en [NestJs Starter](https://github.com/rudemex/nestjs-starter), o
-cualquier proyecto que utilice una configuración centralizada, siguiendo la misma arquitectura del starter.
+Esta dependencia está pensada para ser utilizada en [NestJs Starter](https://github.com/rudemex/nestjs-starter), o cualquier proyecto que utilice una configuración centralizada, siguiendo la misma arquitectura del starter.
 
 ## Glosario
 
@@ -53,8 +52,6 @@ yarn install @tresdoce-nestjs-toolkit/{{kebabCase packageName}}
 
 ## ⚙️ Configuración
 
-
-
 ```typescript
 
 ```
@@ -62,6 +59,10 @@ yarn install @tresdoce-nestjs-toolkit/{{kebabCase packageName}}
 <a name="use"></a>
 
 ## 👨‍💻 Uso
+
+```typescript
+
+```
 
 ## 📄 Changelog
 
