chore(plop): edit readme template

--- a/plops-templates/packages/basic/README.md.hbs
+++ b/plops-templates/packages/basic/README.md.hbs
@@ -19,7 +19,7 @@ Esta dependencia está pensada para ser utilizada en [NestJs Starter](https://gi
 
 - [🥳 Demo](https://rudemex-nestjs-starter.herokuapp.com/docs)
 - [📝 Requerimientos básicos](#basic-requirements)
-- [🛠️ Instalar dependencia](#install-dependencie)
+- [🛠️ Instalar dependencia](#install-dependencies)
 - [⚙️ Configuración](#configurations)
 - [👨‍💻 Uso](#use)
 - [📄 Changelog](./CHANGELOG.md)
@@ -36,7 +36,7 @@ Esta dependencia está pensada para ser utilizada en [NestJs Starter](https://gi
 - NPM v6.14.13 or higher
 - NestJS v8.2.6 or higher ([Documentación](https://nestjs.com/))
 
-<a name="install-dependencie"></a>
+<a name="install-dependencies"></a>
 
 ## 🛠️ Instalar dependencia
 
