docs(core): add documentation to core module

--- a/plops-templates/packages/basic/README.md.hbs
+++ b/plops-templates/packages/basic/README.md.hbs
@@ -43,11 +43,11 @@ proyecto que utilice una configuración centralizada, siguiendo la misma arquite
 ## 🛠️ Instalar dependencia
 
 ```
-npm install @tresdoce-nestjs-toolkit/{{kebabCase packageName}}
+npm install -S @tresdoce-nestjs-toolkit/{{kebabCase packageName}}
 ```
 
 ```
-yarn install @tresdoce-nestjs-toolkit/{{kebabCase packageName}}
+yarn add @tresdoce-nestjs-toolkit/{{kebabCase packageName}}
 ```
 
 <a name="configurations"></a>
