--- a/plops-templates/packages/basic/package.json.hbs
+++ b/plops-templates/packages/basic/package.json.hbs
@@ -42,8 +42,8 @@
     "rxjs": "^7.5.5"
   },
   "devDependencies": {
-    "@tresdoce-nestjs-toolkit/config": "^0.0.0",
-    "@types/tresdoce-nestjs-toolkit": "^0.0.0"
+    "@tresdoce-nestjs-toolkit/config": "*",
+    "@types/tresdoce-nestjs-toolkit": "*"
   },
   "prettier": {
     "semi": true,
