--- a/plops-templates/packages/basic/package.json.hbs
+++ b/plops-templates/packages/basic/package.json.hbs
@@ -1,7 +1,7 @@
 {
   "name": "@tresdoce-nestjs-toolkit/{{kebabCase packageName}}",
   "version": "0.0.0",
-  "description": "Tresdoce NestJS Toolkit - {{kebabCase packageName}}",
+  "description": "Tresdoce NestJS Toolkit - {{packageDescription}}",
   "author": {
     "name": "Maximiliano \"Mex\" Delgado",
     "email": "mdelgado@tresdoce.com.ar",
