--- a/plops-templates/packages/basic/package.json.hbs
+++ b/plops-templates/packages/basic/package.json.hbs
@@ -26,9 +26,10 @@
   "main": "src/index.ts",
   "license": "MIT",
   "scripts": {
-    "prebuild": "shx rm -rf ../../dist/{{kebabCase packageName}}",
+    "prebuild": "rimraf ../../dist/{{kebabCase packageName}}",
     "build": "pika build --out ../../dist/{{kebabCase packageName}}",
-    "test": "jest --runInBand --detectOpenHandles --coverage --forceExit"
+    "test": "jest --runInBand --detectOpenHandles --coverage --forceExit",
+    "clean": "rimraf .turbo coverage node_modules test-report.xml"
   },
   "publishConfig": {
     "access": "public",
