--- a/plops-templates/packages/basic/package.json.hbs
+++ b/plops-templates/packages/basic/package.json.hbs
@@ -28,7 +28,7 @@
   "scripts": {
     "prebuild": "rimraf ../../dist/{{kebabCase packageName}}",
     "build": "pika build --out ../../dist/{{kebabCase packageName}}",
-    "test": "jest --runInBand --detectOpenHandles --coverage --forceExit",
+    "test": "jest --runInBand --coverage --forceExit",
     "clean": "rimraf .turbo coverage node_modules test-report.xml"
   },
   "publishConfig": {
