--- a/plops-templates/packages/dynamicModule/package.json.hbs
+++ b/plops-templates/packages/dynamicModule/package.json.hbs
@@ -29,7 +29,7 @@
     "prebuild": "rimraf ../../dist/{{kebabCase moduleName}}",
     "build": "pika build --out ../../dist/{{kebabCase moduleName}}",
     "test": "jest --runInBand --coverage --forceExit",
-    "clean": "rimraf .turbo coverage test-results reports node_modules test-report.xml junit.xml"
+    "clean": "rimraf .turbo coverage test-results reports node_modules test-report.xml junit.xml debug.json"
   },
   "publishConfig": {
     "access": "public",
