chore: update dependencies

--- a/plops-templates/packages/dynamicModule/src/greeting/interfaces/greeting.interface.ts.hbs
+++ b/plops-templates/packages/dynamicModule/src/greeting/interfaces/greeting.interface.ts.hbs
@@ -1,4 +1,4 @@
-import { DynamicModule, ModuleMetadata, Provider, Type } from '@nestjs/common';
+import { ModuleMetadata, Provider, Type } from '@nestjs/common';
 
 // Opciones básicas para el módulo.
 export interface {{pascalCase moduleName}}ModuleOptions {
