--- a/plops-templates/packages/basic/package.json.hbs
+++ b/plops-templates/packages/basic/package.json.hbs
@@ -8,7 +8,7 @@
     "url": "https://rudemex.github.io/"
   },
   "directories": {
-    "lib": "lib",
+    "src": "src",
     "test": "__tests__"
   },
   "keywords": [
@@ -29,7 +29,7 @@
     "prebuild": "rimraf ../../dist/{{kebabCase packageName}}",
     "build": "pika build --out ../../dist/{{kebabCase packageName}}",
     "test": "jest --runInBand --coverage --forceExit",
-    "clean": "rimraf .turbo coverage test-results reports node_modules test-report.xml junit.xml debug.json"
+    "prepare": "yarn build","clean": "rimraf .turbo coverage test-results reports node_modules test-report.xml junit.xml debug.json"
   },
   "publishConfig": {
     "access": "public",
