--- a/plops-templates/packages/dynamicModule/package.json.hbs
+++ b/plops-templates/packages/dynamicModule/package.json.hbs
@@ -36,12 +36,13 @@
     "directory": "../../dist/{{kebabCase moduleName}}"
   },
   "peerDependencies": {
-    "@nestjs/common": "^10.4.13",
-    "@nestjs/core": "^10.4.13",
-    "@nestjs/platform-express": "^10.4.13",
+    "@nestjs/common": "^10.4.15",
+    "@nestjs/core": "^10.4.15",
+    "@nestjs/platform-express": "^10.4.15",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
+  "dependencies":{},
   "devDependencies": {
     "@tresdoce-nestjs-toolkit/config": "^{{configVersion}}",
     "@types/tresdoce-nestjs-toolkit": "^{{typesVersion}}"
