test: resolve coverage on test

--- a/plops-templates/packages/dynamicModule/src/greeting/greeting.module.ts.hbs
+++ b/plops-templates/packages/dynamicModule/src/greeting/greeting.module.ts.hbs
@@ -101,8 +101,13 @@ export class {{pascalCase moduleName}}Module {
     }
 
     let inject: Type<{{pascalCase moduleName}}ModuleOptionsFactory>[];
-    if (options.useExisting) inject = [options.useExisting];
-    else if (options.useClass) inject = [options.useClass];
+    if (options.useExisting !== undefined) {
+      inject = [options.useExisting];
+    }
+
+    if (options.useClass !== undefined && !inject) {
+      inject = [options.useClass];
+    }
 
     return {
       provide: {{constantCase moduleName}}_MODULE_OPTIONS,
