--- a/plops-templates/packages/dynamicModule/package.json.hbs
+++ b/plops-templates/packages/dynamicModule/package.json.hbs
@@ -35,14 +35,13 @@
     "access": "public",
     "directory": "../../dist/{{kebabCase moduleName}}"
   },
-  "peerDependencies": {
-    "@nestjs/common": "^11.1.3",
-    "@nestjs/core": "^11.1.3",
-    "@nestjs/platform-express": "^11.1.3",
+  "dependencies": {
+    "@nestjs/common": "^11.1.5",
+    "@nestjs/core": "^11.1.5",
+    "@nestjs/platform-express": "^11.1.5",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2"
   },
-  "dependencies":{},
   "devDependencies": {
     "@tresdoce-nestjs-toolkit/config": "^{{configVersion}}",
     "@types/tresdoce-nestjs-toolkit": "^{{typesVersion}}"
